--- a/eventmobileapp/package.json
+++ b/eventmobileapp/package.json
@@ -10,20 +10,34 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-vector-icons/material-design-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.1",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
+    "expo-camera": "^16.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.2.3",
     "moment": "^2.30.1",
+    "qs": "^6.14.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-async-storage": "^0.0.1",
-    "react-native-paper": "^5.14.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.12.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
