--- a/eventmobileapp/app.json
+++ b/eventmobileapp/app.json
@@ -28,7 +28,15 @@
     },
     "permissions": [
       "camera"
+    ],
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera to scan QR codes."
+        }
+      ],
+      "expo-barcode-scanner"
     ]
   }
-  
 }
