--- a/eventmobileapp/package.json
+++ b/eventmobileapp/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/stack": "^7.3.1",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
-    "expo-camera": "^16.1.6",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.1.6",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.2.3",
     "moment": "^2.30.1",
